HHH-17922 - Fix collection events in graph-based ActionQueue
Collection decomposers were generating pre/post recreate and remove events too eagerly, causing duplicate and incorrect events in the graph-based ActionQueue. Fixed event generation logic and updated all collection event tests to support both legacy and graph-based queue implementations.

Key changes:
- Introduced EventSink and EventAnalyzer test infrastructure to replace CollectionListeners
- EventAnalyzer matches PRE/POST event pairs by phase without requiring specific ordering
- Updated collection decomposers to generate events only when appropriate
- Converted collection event tests to use dual-assertion pattern for both queue types
- Renamed QueueImplementation to QueueType for clarity
- Added DecompositionSupport for event handling utilities

All 194 collection event tests now pass with both legacy and graph-based ActionQueue implementations (0 failures, 0 errors).

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>